force-app/main/default/objects/Case/fields/PartnerRealtyAgency__c.field-meta.xml
<CustomField>
    <fullName>PartnerRealtyAgency__c</fullName>
    <label>Imobiliária Parceira</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2Ap Imóveis</fullName>
            </value>
            <value>
                <fullName>3 Quadras</fullName>
            </value>
            <value>
                <fullName>4Thorres Imóveis</fullName>
            </value>
            <value>
                <fullName>7G7 Negócios Imobiliários</fullName>
            </value>
            <value>
                <fullName>Abrylar Imóveis</fullName>
            </value>
            <value>
                <fullName>Achei Morumbi</fullName>
            </value>
            <value>
                <fullName>Ad Company</fullName>
            </value>
            <value>
                <fullName>Ágape negócios imobiliários</fullName>
            </value>
            <value>
                <fullName>Aguiar Negócios Imobiliários Ltda</fullName>
            </value>
            <value>
                <fullName>Aleixo</fullName>
            </value>
            <value>
                <fullName>Aliança Viva</fullName>
            </value>
            <value>
                <fullName>Aliança Viva Botafogo</fullName>
            </value>
            <value>
                <fullName>Aliança Viva Flamengo</fullName>
            </value>
            <value>
                <fullName>Aliança Viva Ipanema</fullName>
            </value>
            <value>
                <fullName>Aliare Imoveis</fullName>
            </value>
            <value>
                <fullName>AoCubo</fullName>
            </value>
            <value>
                <fullName>Ativa Imoveis BH</fullName>
            </value>
            <value>
                <fullName>Atual Imóveis SS Ltda</fullName>
            </value>
            <value>
                <fullName>Augusto Gomes Imoveis</fullName>
            </value>
            <value>
                <fullName>Avelar Imóveis</fullName>
            </value>
            <value>
                <fullName>Avila e Manno Imóveis Ltda</fullName>
            </value>
            <value>
                <fullName>Avilar</fullName>
            </value>
            <value>
                <fullName>Ax7 Investimentos</fullName>
            </value>
            <value>
                <fullName>Azulle Imoveis</fullName>
            </value>
            <value>
                <fullName>BACELLAR IMOBILIARIA LTDA ME</fullName>
            </value>
            <value>
                <fullName>Badain Imóveis</fullName>
            </value>
            <value>
                <fullName>Bbz Imóveis</fullName>
            </value>
            <value>
                <fullName>Be Soluções Imobiliárias</fullName>
            </value>
            <value>
                <fullName>Beg Imoveis</fullName>
            </value>
            <value>
                <fullName>Belossá Imóveis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>