force-app/main/default/objects/Case/fields/PastDueDateSimulation__c.field-meta.xml
<CustomField>
    <fullName>PastDueDateSimulation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Limite de tempo atingido para definir tipo de prestador de serviço</description>
    <inlineHelpText>Limite de tempo atingido para definir tipo de prestador de serviço</inlineHelpText>
    <label>(Simulação) Limite de tempo atingido</label>
    <type>Checkbox</type>
</CustomField>