force-app/main/default/objects/Case/fields/PPReplied__c.field-meta.xml
<CustomField>
    <fullName>PPReplied__c</fullName>
    <label>PP Respondeu?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesOrNo</valueSetName>
    </valueSet>
</CustomField>