force-app/main/default/objects/Case/fields/PreferredContactChannel__c.field-meta.xml
<CustomField>
    <fullName>PreferredContactChannel__c</fullName>
    <label>Canal de preferência de contato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ContactPreference</valueSetName>
    </valueSet>
</CustomField>