force-app/main/default/objects/Case/fields/PrimaryOwneroftheCustomerService__c.field-meta.xml
<CustomField>
    <fullName>PrimaryOwneroftheCustomerService__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is intended to identify which property owner the agent dealt with.</description>
    <label>Proprietário Principal do Atendimento</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CaseMember__c.Case__c</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <filterItems>
            <field>CaseMember__c.Type__c</field>
            <operation>equals</operation>
            <value>Owner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CaseMember__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>CaseMemberOwner</relationshipName>
    <type>Lookup</type>
</CustomField>