force-app/main/default/objects/Case/fields/PrimaryTenantoftheCustomerService__c.field-meta.xml
<CustomField>
    <fullName>PrimaryTenantoftheCustomerService__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inquilino Principal do Atendimento</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CaseMember__c.Case__c</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <filterItems>
            <field>CaseMember__c.Type__c</field>
            <operation>equals</operation>
            <value>Tenant</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CaseMember__c</referenceTo>
    <relationshipLabel>Casos (Inquilino Principal do Atendimento)</relationshipLabel>
    <relationshipName>CaseTenant</relationshipName>
    <type>Lookup</type>
</CustomField>