force-app/main/default/objects/Case/fields/PriorityByFlow__c.field-meta.xml
<CustomField>
    <fullName>PriorityByFlow__c</fullName>
    <label>Prioridade por fluxo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CriticalOnboarding</fullName>
                <label>Crítico (Onboarding)</label>
            </value>
            <value>
                <fullName>HighOnboarding</fullName>
                <label>Alto (Onboarding)</label>
            </value>
            <value>
                <fullName>MediumOnboarding</fullName>
                <label>Médio (Onboarding)</label>
            </value>
            <value>
                <fullName>LowOnboarding</fullName>
                <label>Baixo (Onboarding)</label>
            </value>
            <value>
                <fullName>EmergencyOnboarding</fullName>
                <label>Emergencial (Onboarding)</label>
            </value>
            <value>
                <fullName>NotEmergencyOnboarding</fullName>
                <label>Não Emergencial (Onboarding)</label>
            </value>
            <value>
                <fullName>CriticalOffboarding</fullName>
                <label>Crítico (Offboarding)</label>
            </value>
            <value>
                <fullName>HighOffboarding</fullName>
                <label>Alto (Offboarding)</label>
            </value>
            <value>
                <fullName>MediumOffboarding</fullName>
                <label>Médio (Offboarding)</label>
            </value>
            <value>
                <fullName>LowOffboarding</fullName>
                <label>Baixo (Offboarding)</label>
            </value>
            <value>
                <fullName>EmergencyOffboarding</fullName>
                <label>Emergencial (Offboarding)</label>
            </value>
            <value>
                <fullName>NotEmergencyOffboarding</fullName>
                <label>Não Emergencial (Offboarding)</label>
            </value>
            <value>
                <fullName>HighInternal</fullName>
                <label>Alto (Interno)</label>
            </value>
            <value>
                <fullName>LowInternal</fullName>
                <label>Baixo (Interno)</label>
            </value>
            <value>
                <fullName>CriticalInternal</fullName>
                <label>Crítico (Interno)</label>
            </value>
            <value>
                <fullName>EmergencyInternal</fullName>
                <label>Emergencial (Interno)</label>
            </value>
            <value>
                <fullName>MediumInternal</fullName>
                <label>Médio (Interno)</label>
            </value>
            <value>
                <fullName>NotEmergencyInternal</fullName>
                <label>Não Emergencial (Interno)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>