force-app/main/default/objects/Case/fields/PriorityLighthouse__c.field-meta.xml
<CustomField>
    <fullName>PriorityLighthouse__c</fullName>
    <formula>CASE(
Priority,
&quot;Low&quot;, &quot;🟢 4 - Baixo&quot;,
&quot;Medium&quot;, &quot;🔵 3 - Médio&quot;,
&quot;High&quot;, &quot;🟠 2 - Alto&quot;,
&quot;Critical&quot;, &quot;🔴 1 - Crítico&quot;,
&quot;Emergency&quot;, &quot;🚨 Emergencial&quot;,
&quot;⚪&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prioridade</label>
    <type>Text</type>
</CustomField>