force-app/main/default/objects/Case/fields/PropertyAddress__c.field-meta.xml
<CustomField>
    <fullName>PropertyAddress__c</fullName>
    <label>Endereço do Imóvel</label>
    <length>200</length>
    <type>Text</type>
</CustomField>