force-app/main/default/objects/Case/fields/PropertyID__c.field-meta.xml
<CustomField>
    <fullName>PropertyID__c</fullName>
    <label>Imóvel</label>
    <length>20</length>
    <type>Text</type>
</CustomField>