force-app/main/default/objects/Case/fields/PropertyMagicLink__c.field-meta.xml
<CustomField>
    <fullName>PropertyMagicLink__c</fullName>
    <formula>RelatedContract__r.MagicLinkProperty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Magic Link</label>
    <type>Text</type>
</CustomField>