force-app/main/default/objects/Case/fields/PropertyNumber__c.field-meta.xml
<CustomField>
    <fullName>PropertyNumber__c</fullName>
    <formula>RelatedContract__r.PropertyId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número do Imóvel</label>
    <type>Text</type>
</CustomField>