force-app/main/default/objects/Case/fields/PropertyOld__c.field-meta.xml
<CustomField>
    <fullName>PropertyOld__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Propriedade</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>