force-app/main/default/objects/Case/fields/PublicationOccurredOnProperty__c.field-meta.xml
<CustomField>
    <fullName>PublicationOccurredOnProperty__c</fullName>
    <label>Ocorreu publicação no imóvel?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>