force-app/main/default/objects/Case/fields/PurchaseSaleContract__c.field-meta.xml
<CustomField>
    <fullName>PurchaseSaleContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Id da Offer</label>
    <referenceTo>PurchaseSaleContract__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>