force-app/main/default/objects/Case/fields/RaceFinished__c.field-meta.xml
<CustomField>
    <fullName>RaceFinished__c</fullName>
    <label>Corrida Finalizada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
                <label>Sim</label>
            </value>
            <value>
                <fullName>False</fullName>
                <label>Não</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>