force-app/main/default/objects/Case/fields/ReasonForRetry__c.field-meta.xml
<CustomField>
    <fullName>ReasonForRetry__c</fullName>
    <label>Motivo passível de nova tentativa?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>