force-app/main/default/objects/Case/fields/RecipientId__c.field-meta.xml
<CustomField>
    <fullName>RecipientId__c</fullName>
    <label>Id do Destinatário</label>
    <type>TextArea</type>
</CustomField>