force-app/main/default/objects/Case/fields/RecipientPerson__c.field-meta.xml
<CustomField>
    <fullName>RecipientPerson__c</fullName>
    <label>Pessoa Recebedora</label>
    <length>255</length>
    <type>Text</type>
</CustomField>