force-app/main/default/objects/Case/fields/RelatedContract__c.field-meta.xml
<CustomField>
    <fullName>RelatedContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato Relacionado</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>