force-app/main/default/objects/Case/fields/RelatedContractId__c.field-meta.xml
<CustomField>
    <fullName>RelatedContractId__c</fullName>
    <label>Id do Contrato Relacionado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>