force-app/main/default/objects/Case/fields/RelatedContractLink__c.field-meta.xml
<CustomField>
    <fullName>RelatedContractLink__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; &amp; RelatedContract__c, RelatedContract__r.Name, &apos;_blank&apos;)</formula>
    <label>Contrato Relacionado</label>
    <type>Text</type>
</CustomField>