force-app/main/default/objects/Case/fields/RepairId__c.field-meta.xml
<CustomField>
    <fullName>RepairId__c</fullName>
    <externalId>true</externalId>
    <label>Id do Reparo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>