force-app/main/default/objects/Case/fields/RequestedHelpTimeLimit__c.field-meta.xml
<CustomField>
    <fullName>RequestedHelpTimeLimit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tempo limite &quot;Solicitou ajuda via App?&quot;</label>
    <type>Checkbox</type>
</CustomField>