force-app/main/default/objects/Case/fields/RequesterAccount__c.field-meta.xml
<CustomField>
    <fullName>RequesterAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente solicitante</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Casos (Solicitante)</relationshipLabel>
    <relationshipName>Casos_Requester</relationshipName>
    <type>Lookup</type>
</CustomField>