force-app/main/default/objects/Case/fields/RideDistance__c.field-meta.xml
<CustomField>
    <fullName>RideDistance__c</fullName>
    <label>Distância</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>