force-app/main/default/objects/Case/fields/Risk_Level_DD__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level_DD__c</fullName>
    <description>Field created at User Story SWSS-648</description>
    <label>Nível de Risco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <label>Baixo</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <label>Médio</label>
            </value>
            <value>
                <fullName>High</fullName>
                <label>Alto</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>