force-app/main/default/objects/Case/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>De qual área você é?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IAm__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>SV</fullName>
            </value>
            <value>
                <fullName>Expert</fullName>
            </value>
            <value>
                <fullName>CIQ</fullName>
            </value>
            <value>
                <fullName>Outras</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>