force-app/main/default/objects/Case/fields/ServiceAccountIssue__c.field-meta.xml
<CustomField>
    <fullName>ServiceAccountIssue__c</fullName>
    <label>Problema na conta de serviço</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ServiceAccountIssue</valueSetName>
    </valueSet>
</CustomField>