force-app/main/default/objects/Case/fields/serviceProviderJourney__c.field-meta.xml
<CustomField>
    <fullName>serviceProviderJourney__c</fullName>
    <label>Provedor da Jornada de Serviço</label>
    <length>255</length>
    <type>Text</type>
</CustomField>