force-app/main/default/objects/Case/fields/serviceProviderName__c.field-meta.xml
<CustomField>
    <fullName>serviceProviderName__c</fullName>
    <label>Nome do prestador de serviço</label>
    <length>255</length>
    <type>Text</type>
</CustomField>