force-app/main/default/objects/Case/fields/serviceProviderPhone__c.field-meta.xml
<CustomField>
    <fullName>serviceProviderPhone__c</fullName>
    <label>Telefone do prestador de serviço</label>
    <length>40</length>
    <type>Text</type>
</CustomField>