force-app/main/default/objects/Case/fields/serviceProviderType__c.field-meta.xml
<CustomField>
    <fullName>serviceProviderType__c</fullName>
    <label>Tipo de prestador de serviço</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OWNER_PROVIDER</fullName>
                <label>Prestador de serviço indicado pelo proprietário</label>
            </value>
            <value>
                <fullName>TENANT_PROVIDER_WITH_OWNER_APPROVAL</fullName>
                <label>Prestador indicado pelo inquilino com aprovação do Proprietário</label>
            </value>
            <value>
                <fullName>TENANT_PROVIDER_WITHOUT_OWNER_APPROVAL</fullName>
                <isActive>false</isActive>
                <label>Prestador indicado pelo inquilino (compulsório) sem aprovação do Proprietário</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>