force-app/main/default/objects/Case/fields/SimulationTenantBudgetTimeLimit__c.field-meta.xml
<CustomField>
    <fullName>SimulationTenantBudgetTimeLimit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>(Simulação) IQ Limite de tempo atingido</label>
    <type>Checkbox</type>
</CustomField>