force-app/main/default/objects/Case/fields/SkillPriority__c.field-meta.xml
<CustomField>
    <fullName>SkillPriority__c</fullName>
    <formula>AND(
 ISPICKVAL(Origin, &apos;Front&apos;),
 ISPICKVAL(Priority, &apos;Emergency&apos;),
 ISPICKVAL(criticality__c, &apos;EMERGENCY&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priorização de Habilidade</label>
    <type>Checkbox</type>
</CustomField>