force-app/main/default/objects/Case/fields/SKSession__c.field-meta.xml
<CustomField>
    <fullName>SKSession__c</fullName>
    <description>Magic Link SK Session</description>
    <inlineHelpText>Magic Link SK Session</inlineHelpText>
    <label>SKSession</label>
    <length>255</length>
    <type>Text</type>
</CustomField>