force-app/main/default/objects/Case/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <formula>CASE(
    SLALighthouse__c,
    &quot;WithinTheDeadline&quot;, &quot;🟢&quot;,
    &quot;DueDateApproaching&quot;, &quot;🟡&quot;,
    &quot;Expired&quot;, &quot;🔴&quot;,
    &quot;⚪&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA</label>
    <type>Text</type>
</CustomField>