force-app/main/default/objects/Case/fields/SLALighthouse__c.field-meta.xml
<CustomField>
    <fullName>SLALighthouse__c</fullName>
    <label>Farol de SLA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WithinTheDeadline</fullName>
                <default>true</default>
                <label>Within The Deadline</label>
            </value>
            <value>
                <fullName>DueDateApproaching</fullName>
                <label>Due Date Approaching</label>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Dentro do Prazo</fullName>
                <isActive>false</isActive>
                <label>Dentro do Prazo</label>
            </value>
            <value>
                <fullName>Próximo do Vencimento</fullName>
                <isActive>false</isActive>
                <label>Próximo do Vencimento</label>
            </value>
            <value>
                <fullName>Vencido</fullName>
                <isActive>false</isActive>
                <label>Vencido</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>