force-app/main/default/objects/Case/fields/SLContactSuccess__c.field-meta.xml
<CustomField>
    <fullName>SLContactSuccess__c</fullName>
    <label>[SL] Contato teve sucesso?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>