force-app/main/default/objects/Case/fields/SLCurrentOnboardingContact__c.field-meta.xml
<CustomField>
    <fullName>SLCurrentOnboardingContact__c</fullName>
    <label>[SL] Contato Atual do Onboarding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FIRST_CONTACT</fullName>
                <label>Primeiro Contato</label>
            </value>
            <value>
                <fullName>SECOND_CONTACT</fullName>
                <label>Segundo Contato</label>
            </value>
            <value>
                <fullName>THIRD_CONTACT</fullName>
                <label>Terceiro Contato</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>