force-app/main/default/objects/Case/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Fase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CustomerContact</fullName>
                <label>Contato com clientes</label>
            </value>
            <value>
                <fullName>RideLocksmith</fullName>
                <label>Corrida/Chaveiro</label>
            </value>
            <value>
                <fullName>ClosedWon</fullName>
                <label>Concluído com Sucesso</label>
            </value>
            <value>
                <fullName>ClosedLost</fullName>
                <label>Concluído sem Sucesso</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>