force-app/main/default/objects/Case/fields/StartServiceDate__c.field-meta.xml
<CustomField>
    <fullName>StartServiceDate__c</fullName>
    <label>Data de Atendimento</label>
    <type>DateTime</type>
</CustomField>