force-app/main/default/objects/Case/fields/StatusReadOnly__c.field-meta.xml
<CustomField>
    <fullName>StatusReadOnly__c</fullName>
    <formula>CASE(
  TEXT(Status),
  &quot;FS_NOT_INITIATED&quot;, &quot;Não Iniciado&quot;,
  &quot;AWAITING_OWNER_ACTION&quot;, &quot;Aguardando ação do Proprietário&quot;,
  &quot;IN_PROGRESS&quot;, &quot;Em Progresso&quot;,
  &quot;FS_IN_PROGRESS&quot;, &quot;Em Andamento&quot;,
  &quot;AWAITING_BUDGET&quot;, &quot;Aguardando Orçamento&quot;,
  &quot;AWAITING_BUDGET_APPROVAL&quot;, &quot;Aguardando Aprovação do Orçamento&quot;,
  &quot;CANCELED&quot;, &quot;Cancelado&quot;,
  &quot;RESOLVED&quot;, &quot;Concluído&quot;,
  &quot;IN_APPROVAL&quot;, &quot;Em aprovação&quot;,
  &quot;UNASSIGNED&quot;, &quot;Desencarteirado&quot;,
  &quot;UNASSIGNED_CONTACT&quot;, &quot;Desencarteirado - Contato&quot;,
  TEXT(Status)  
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>