force-app/main/default/objects/Case/fields/SubjectCorrespondsRequestReason__c.field-meta.xml
<CustomField>
    <fullName>SubjectCorrespondsRequestReason__c</fullName>
    <label>O assunto corresponde à solicitação?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
                <default>true</default>
                <label>Sim</label>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>