force-app/main/default/objects/Case/fields/TaskNotes__c.field-meta.xml
<CustomField>
    <fullName>TaskNotes__c</fullName>
    <label>Observação da tarefa</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>