force-app/main/default/objects/Case/fields/TenantProviderOwnerApprovalClosed__c.field-meta.xml
<CustomField>
    <fullName>TenantProviderOwnerApprovalClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IQ aguarda aprovação do LL marco Fecha</label>
    <type>Checkbox</type>
</CustomField>