force-app/main/default/objects/Case/fields/TenantProviderOwnerApprovalMilestone__c.field-meta.xml
<CustomField>
    <fullName>TenantProviderOwnerApprovalMilestone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prestador IQ augarda aprovação do LL mar</label>
    <type>Checkbox</type>
</CustomField>