force-app/main/default/objects/Case/fields/TenantRecipientId__c.field-meta.xml
<CustomField>
    <fullName>TenantRecipientId__c</fullName>
    <description>This field is intended to store the ID value to be sent to Survicate.</description>
    <label>Id do Inquilino Destinatário</label>
    <type>TextArea</type>
</CustomField>