force-app/main/default/objects/Case/fields/TenantServiceProviderMilestone__c.field-meta.xml
<CustomField>
    <fullName>TenantServiceProviderMilestone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Será Prestador IQ começa o marco</label>
    <type>Checkbox</type>
</CustomField>