force-app/main/default/objects/Case/fields/TenantServiceProviderMilestoneClosed__c.field-meta.xml
<CustomField>
    <fullName>TenantServiceProviderMilestoneClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Será Prestador IQ começa o marco Fecha</label>
    <type>Checkbox</type>
</CustomField>