force-app/main/default/objects/Case/fields/Termination__c.field-meta.xml
<CustomField>
    <fullName>Termination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rescisão</label>
    <referenceTo>Termination__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>