force-app/main/default/objects/Case/fields/testCog_AccountDigit__c.field-meta.xml
<CustomField>
    <fullName>testCog_AccountDigit__c</fullName>
    <label>Digito da Conta</label>
    <length>15</length>
    <type>Text</type>
</CustomField>