force-app/main/default/objects/Case/fields/testCog_AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>testCog_AccountNumber__c</fullName>
    <label>Conta</label>
    <length>20</length>
    <type>Text</type>
</CustomField>