force-app/main/default/objects/Case/fields/testCog_AccountType__c.field-meta.xml
<CustomField>
    <fullName>testCog_AccountType__c</fullName>
    <label>Tipo de Conta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corrente</fullName>
            </value>
            <value>
                <fullName>Poupança</fullName>
            </value>
            <value>
                <fullName>Corrente Conjunta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>