force-app/main/default/objects/Case/fields/testCog_BankType__c.field-meta.xml
<CustomField>
    <fullName>testCog_BankType__c</fullName>
    <label>Tipo de Banco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Banco Físico</fullName>
            </value>
            <value>
                <fullName>Banco Digital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>