force-app/main/default/objects/Case/fields/testCog_Branch__c.field-meta.xml
<CustomField>
    <fullName>testCog_Branch__c</fullName>
    <label>Agência</label>
    <length>15</length>
    <type>Text</type>
</CustomField>