force-app/main/default/objects/Case/fields/testCog_BranchDigit__c.field-meta.xml
<CustomField>
    <fullName>testCog_BranchDigit__c</fullName>
    <label>Dígito da Agência</label>
    <length>4</length>
    <type>Text</type>
</CustomField>