force-app/main/default/objects/Case/fields/testCog_DocumentType__c.field-meta.xml
<CustomField>
    <fullName>testCog_DocumentType__c</fullName>
    <label>Tipo de Documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RG</fullName>
            </value>
            <value>
                <fullName>CNH</fullName>
            </value>
            <value>
                <fullName>Passaporte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>