force-app/main/default/objects/Case/fields/testCog_IluminationPhoto__c.field-meta.xml
<CustomField>
    <fullName>testCog_IluminationPhoto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fotos com boa iluminação?</label>
    <type>Checkbox</type>
</CustomField>