force-app/main/default/objects/Case/fields/testCog_InputContract__c.field-meta.xml
<CustomField>
    <fullName>testCog_InputContract__c</fullName>
    <label>Número de contrato</label>
    <length>20</length>
    <type>Text</type>
</CustomField>