force-app/main/default/objects/Case/fields/testCog_InputCPF__c.field-meta.xml
<CustomField>
    <fullName>testCog_InputCPF__c</fullName>
    <label>CPF</label>
    <length>20</length>
    <type>Text</type>
</CustomField>