force-app/main/default/objects/Case/fields/testCog_OwnerDocument__c.field-meta.xml
<CustomField>
    <fullName>testCog_OwnerDocument__c</fullName>
    <label>CPF ou CNPJ do titular da conta</label>
    <length>20</length>
    <type>Text</type>
</CustomField>