force-app/main/default/objects/Case/fields/testCog_PhotosAreClear__c.field-meta.xml
<CustomField>
    <fullName>testCog_PhotosAreClear__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fotos Legíveis?</label>
    <type>Checkbox</type>
</CustomField>