force-app/main/default/objects/Case/fields/testCog_PPmult__c.field-meta.xml
<CustomField>
    <fullName>testCog_PPmult__c</fullName>
    <label>Possui 5 Imoveis ou Mais?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>