force-app/main/default/objects/Case/fields/testCog_RentPaymentReceived__c.field-meta.xml
<CustomField>
    <fullName>testCog_RentPaymentReceived__c</fullName>
    <label>Você recebeu o valor do seu ultimo alugu</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>