force-app/main/default/objects/Case/fields/testCog_SamePersonPhoto__c.field-meta.xml
<CustomField>
    <fullName>testCog_SamePersonPhoto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmo ser a mesma pessoa da foto</label>
    <type>Checkbox</type>
</CustomField>