force-app/main/default/objects/Case/fields/testCog_SelfieWithout__c.field-meta.xml
<CustomField>
    <fullName>testCog_SelfieWithout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selfie sem Acessórios</label>
    <type>Checkbox</type>
</CustomField>